--- a/competitions/hallucination/tournaments/precision/grading.yaml
+++ b/competitions/hallucination/tournaments/precision/grading.yaml
@@ -11,23 +11,23 @@ prompt: |-
 
   You shall grade the performance of a player. To do so, you will be presented with the question, the evidence they had available, and the answer they provided. 
 
-  You shall provide your evaluation in the form of a grade, plus a reasoning for grading the performance of the player, in this structure:
+  You shall provide your evaluation in the form of a grade, an assessment of the validity of the question, plus a reasoning for grading the performance of the player, in this structure:
 
   Grade: <grade>
   Reasoning: <one sentence assessment of performance with reference to concrete shortcomings or mistakes>
 
   Standard grades are for the answers are:
   A - Good: no hallucinations, misleading information, extrapolations, or any factual errors; fully addresses the question.
-  B - Fair: no significant errors; minor deviations from the evidence material or additional supporting commentary but no extrapolations or inferences from the evidence; only relies on information clearly stated in the evidence; answer addresses the question and can be practically used.
-  C - Inapplicable: the answer is grounded in the evidence, like A or B grade, but it FAILS TO ADDRESS the original question.
-  D - Wrong: substantial hallucinations or misleading information; answer addresses the question but would dangerous in a business context and could lead to wrong decisions.
+  B - Fair: no significant errors; possible omissions, minor deviations from the evidence material or additional supporting commentary but no extrapolations or inferences from the evidence; only relies on information clearly stated in the evidence; answer addresses the question and can be practically used.
+  C - Wrong: substantial misleading or wrong information provided; answer addresses the question.
+  D - Inapplicable: the answer FAILS TO ADDRESS question, but the response per se is grounded in evidence.
 
   A special grade is:
   Z - No answer: the player EXPLICITLY REFUSED to answer the question, AND there is not enough evidence to answer the question.
 
   Keep in mind that players are instructed to silently accept obvious spelling errors in the question without mentioning the error. This is tolerated and does not count as a mistake.
   
-  For example:
+  For example, a grading could look like this:
 
   Grade: B
   Reasoning: The answer is factually correct, but it contains additional commentary about the importance of the topic that are not supported by the evidence material.
