--- a/competitions/hallucination/tournaments/precision/grading.yaml
+++ b/competitions/hallucination/tournaments/precision/grading.yaml
@@ -1,7 +1,7 @@
 ---
 name: precision
 description: Evaluate the precision of an answer
-model: gpt-4-1106-preview
+model: gpt-4
 temperature: 0.0
 objective: create a maximally factually faithful and precise answer to a business question, solely based on a given piece of evidence material, such as an excerpt of a market research report or a news article
 prompt: |-
@@ -9,6 +9,7 @@ prompt: |-
 
   The objective of players in the competition is to create a maximally factually faithful and precise answer to a business question, solely based on a given piece of evidence material, such as an excerpt of a market research report or a news article. 
 
+  === INSTRUCTIONS ===
   You shall grade the performance of a player. To do so, you will be presented with the question, the evidence they had available, and the answer they provided. 
 
   You shall provide your evaluation in the form of a grade, an assessment of the validity of the question, plus a reasoning for grading the performance of the player, in this structure:
@@ -16,33 +17,35 @@ prompt: |-
   Grade: <grade>
   Reasoning: <one sentence assessment of performance with reference to concrete shortcomings or mistakes>
 
-  Standard grades are for the answers are:
-  A - Good: no hallucinations, misleading information, extrapolations, or any factual errors; fully addresses the question.
-  B - Fair: no significant errors; possible omissions, minor deviations from the evidence material or additional supporting commentary but no extrapolations or inferences from the evidence; only relies on information clearly stated in the evidence; answer addresses the question and can be practically used.
-  C - Wrong: substantial misleading or wrong information provided; answer addresses the question.
-  D - Inapplicable: the answer FAILS TO ADDRESS question, but the response per se is grounded in evidence.
-
-  A special grade is:
-  Z - No answer: the player EXPLICITLY REFUSED to answer the question, AND there is not enough evidence to answer the question.
+  You shall use the following grading logic:
+  1. If the player clearly and explicitly states they cannot answer the question AND provide no information other than what is in the evidence material, THEN grade it Z.
+  2. Else, if the answer contains factually wrong information that is not present in the evidence, misinterprets evidence, or contains unsubstantiated conclusions, THEN grade it D.
+  3. Else, if the answer does not address the question, THEN grade it C.
+  4. Else, if the answer contains minor omissions or deviations from the evidence material, or additional supporting commentary, THEN grade it B.
+  5. Else, it is a perfect answer and grade it A.
 
   Keep in mind that players are instructed to silently accept obvious spelling errors in the question without mentioning the error. This is tolerated and does not count as a mistake.
   
   For example, a grading could look like this:
 
   Grade: B
-  Reasoning: The answer is factually correct, but it contains additional commentary about the importance of the topic that are not supported by the evidence material.
+  Reasoning: The answer is factually correct and addresses the question, but it contains additional commentary about the importance of the topic that are not supported by the evidence material.
 
-  For this round in the competition, the question is: "{query}"
+  === COMPETITION ===
+
+  Now we come to the next round in the competition
 
   The evidence material is from a {summary}:
-  ===START===
+  ---START---
   {text}
-  ===END===
+  ---END---
 
-  The answer that you shall grade is:
-  ===START===
+  Based on the evidence above, the player responded the question "{query}" with the following answer:
+  ---START---
   {output}
-  ===END===
+  ---END---
 
-  Now silently consider the question, evidence, and answer. Recall the grading rules and then proceed to provide your grading of the player's performance in answering the question "{query}".
+  === GRADING ===
+
+  Now silently consider the question, evidence, and answer. Recall the grading rules and then proceed to provide your grading of the player's performance in answering the question.
   
