--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 anthropic==0.3.11
+cohere==4.36
 google-cloud-aiplatform==1.32.0
+grpcio-status==1.58.0
 openai==0.28.0
-tenacity==8.2.3
+openpyxl==3.1.2
 python-dotenv==1.0.0
-seaborn==0.12.2
-pandas==2.1.0
 ruamel.yaml==0.17.32
+scipy==1.11.3
+seaborn==0.12.2
+setuptools==68.1.2
+tenacity==8.2.3
+timeout-decorator==0.5.0
